# iree

./: .bazel_to_cmake.cfg.py  CMakeLists.txt
.github/: CODEOWNERS
docs/website/docs/guides/deployment-configurations/: index.md
experimental/hsa/: BUILD.bazel  CMakeLists.txt  api.h
experimental/hsa/cts/: CMakeLists.txt
experimental/hsa/device/: README.md  allocator.cl  allocator.h  buffer.cl  buffer.h  command_buffer.cl  command_buffer.h  host.cl  host.h  kernel.h  scheduler.cl  scheduler.h  tracing.cl  tracing.h
experimental/hsa/device/support/: opencl.h  queue.h  ringbuffer.cl  ringbuffer.h  signal.h  signal_pool.cl  signal_pool.h  version.cl
experimental/hsa/registration/: BUILD.bazel  CMakeLists.txt  driver_module.c  driver_module.h
experimental/hsa_tests/: build_kernels.sh  hsa0.c  hsa1.c  hsa2.c  hsa3.c  hsa4.c  hsa5.c  hsa6.c  kernels.cl  kernels_cl.bc  kernels_cl.elf  kernels_cl.ll  kernels_cl.txt  kernels_hip.bc  kernels_hip.elf  kernels_hip.ll  kernels_hip.txt
runtime/src/iree/hal/drivers/amdgpu/device/: CMakeLists.txt  command_buffer.c  command_buffer.h  kernel.h  tracing.c  tracing.h
runtime/src/iree/hal/drivers/amdgpu/device/support/: opencl.h
runtime/src/iree/schemas/: hsa_executable_def.fbs
